Template file integration Added Entities and forms for practices and contact

--- a/src/SiteBundle/Resources/config/routing.yml
+++ b/src/SiteBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 homepage:
     path:     /
-    defaults: { _controller: SiteBundle:Default:index }
+    defaults: { _controller: SiteBundle:Home:home }
 
 
 about:
