--- a/src/SiteBundle/Resources/config/routing.yml
+++ b/src/SiteBundle/Resources/config/routing.yml
@@ -47,3 +47,7 @@ news:
 technology:
     path:     /technology
     defaults: { _controller: SiteBundle:Technology:technology }
+
+contact_process:
+    path:     /process/contact
+    defaults: { _controller: SiteBundle:FormProcess:contactProcess }
