--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -35,6 +35,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        company_name: %company_name%
 
 # Assetic Configuration
 assetic:
@@ -82,5 +84,4 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
-
-
+    sender_address: %send_emails_from%
