--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,8 +23,17 @@ parameters:
     use_assetic_controller: true
 
     company_name: Scottsdale Health Partners
+    company_phone: +1 (480) 588-7528
+    company_address1: 8901 E Mountain View Rd
+    company_address2:
+    company_city: Scottsdale
+    company_state: AZ
+    company_zip_code: 85258
+    company_location_latitude: 33.57338
+    company_location_longitude: -111.88749
 
-    send_emails_to: justin@omedix.com
+    send_dev_emails_to: justin@omedix.com
+    send_emails_to: support@scottsdalehealthpartners.com
     send_emails_from: web@scottsdalehealthpartners.com
     send_emails_cc: ~
     send_emails_bcc: ~
