--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,6 +37,7 @@ twig:
     strict_variables: "%kernel.debug%"
     globals:
         company_name: %company_name%
+        company_founded: %company_founded%
         company_phone: %company_phone%
         company_address1: %company_address1%
         company_address2: %company_address2%
