--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -95,3 +95,9 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
     sender_address: %send_emails_from%
+
+doctrine_migrations:
+    dir_name: %kernel.root_dir%/DoctrineMigrations
+    namespace: SiteBundle\Migrations
+    table_name: migration_versions
+    name: Application Migrations
