--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "knplabs/knp-menu-bundle": "~2",
         "doctrine/migrations": "dev-master",
         "doctrine/doctrine-migrations-bundle": "dev-master",
-        "doctrine/doctrine-fixtures-bundle": "dev-master"
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "jms/serializer-bundle": "0.13.*",
+        "friendsofsymfony/rest-bundle": "^1.7"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
