fixing assets to not be included

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -24,7 +24,7 @@ parameters:
 
     company_name: Scottsdale Health Partners
     company_founded: 2012
-    company_phone: +1 (480) 696-4020
+    company_phone: (480) 696-4020
     company_address1: 8901 E Mountain View Rd
     company_address2:
     company_city: Scottsdale
