content updates and webkit browser owl carousel background fixed position flicker fix

--- a/src/SiteBundle/Resources/config/routing.yml
+++ b/src/SiteBundle/Resources/config/routing.yml
@@ -57,7 +57,7 @@ contact_process:
 
 for_patients:
     path:     /for-patients
-    defaults: { _controller: SiteBundle:ForPatients:forPatients }
+    defaults: { _controller: SiteBundle:ForPatients:ourPhilosophy }
 
 our_philosophy:
     path:     /our-philosophy
