--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -38,3 +38,7 @@ parameters:
     send_emails_from: web@scottsdalehealthpartners.com
     send_emails_cc: ~
     send_emails_bcc: ~
+
+    meta_keywords_default: "aco, accountable, care, organization, health, partners, scottsdale, arizona"
+    meta_description_default: "Scottsdale Health Partners is a physician-led Clinical Integration Network and Accountable Care Organization. We are dedicated to improving patient health and reducing healthcare spend through collaboration, coordination, and communication in the community."
+    meta_author_default: "omedix.com"
