--- a/src/SiteBundle/Resources/config/services.yml
+++ b/src/SiteBundle/Resources/config/services.yml
@@ -2,3 +2,6 @@ services:
 #    site.example:
 #        class: SiteBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
+#    sitebundle.datafixtures.orm.loadpracticeslocations:
+#        class: SiteBundle\DataFixtures\ORM\LoadPracticesLocations
+#        arguments: [ @doctrine.orm.entity_manager ]
