--- a/src/.htaccess
+++ b/src/.htaccess
@@ -5,3 +5,7 @@
     Order deny,allow
     Deny from all
 </IfModule>
+
+RewriteEngine On
+RewriteCond %{HTTP:Authorization} ^(.*)
+RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
