--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -147,3 +147,11 @@ fos_rest:
         failed_validation: HTTP_BAD_REQUEST
         default_engine: twig
 
+
+# JWT
+lexik_jwt_authentication:
+    private_key_path: %jwt_private_key_path%
+    public_key_path:  %jwt_public_key_path%
+    pass_phrase:      %jwt_key_pass_phrase%
+    token_ttl:        %jwt_token_ttl%
+
