made zip searchable. started working on GeoLocation integration. not working 100%. will need more time to work on it.

--- a/src/SiteBundle/Resources/config/routing.yml
+++ b/src/SiteBundle/Resources/config/routing.yml
@@ -71,7 +71,7 @@ physician_directory:
     defaults: { _controller: SiteBundle:ForPatients:physicianDirectory }
 
 physicians_in_practice:
-    path:     /physician-directory/{practiceId}/{practiceLocationId}
+    path:     /physician-directory/practice/{practiceId}/{practiceLocationId}
     defaults: { _controller: SiteBundle:ForPatients:physiciansInPractice }
 
 insurance_plans:
