--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -91,6 +91,10 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
 
+        dql:
+            string_functions:
+                GROUP_CONCAT: SiteBundle\DQL\GroupConcat
+
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
