--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,3 +2,18 @@ site:
     resource: "@SiteBundle/Resources/config/routing.yml"
     prefix:   /
 
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
+cmf_tree:
+    resource: .
+    type: 'cmf_tree'
