--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,20 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "knplabs/knp-menu-bundle": "~2",
+        "knplabs/knp-menu-bundle": "~1.1",
         "doctrine/migrations": "dev-master",
         "doctrine/doctrine-migrations-bundle": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "jms/serializer-bundle": "0.13.*",
         "friendsofsymfony/rest-bundle": "^1.7",
-        "salva/pdfjs-bundle": "1.0.*@dev"
+        "salva/pdfjs-bundle": "1.0.*@dev",
+        "symfony-cmf/symfony-cmf": "1.0.1",
+        "jackalope/jackalope-doctrine-dbal": "1.0.*",
+        "doctrine/phpcr-bundle": "1.0.*",
+        "doctrine/phpcr-odm": "1.0.*",
+		"sonata-project/doctrine-phpcr-admin-bundle": "1.0.*",
+		"sonata-project/core-bundle": "~2.2"
+
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
