fixed missing postal code file. added back the DQL extensions that wouldn't push to the repository. cleaned up some zip code radius search clear data fixtures, reload fixtures, and update all other files. clear cache.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -94,6 +94,12 @@ doctrine:
         dql:
             string_functions:
                 GROUP_CONCAT: SiteBundle\DQL\GroupConcat
+                radians: SiteBundle\DQL\Radians
+
+            numeric_functions:
+                acos: SiteBundle\DQL\Acos
+                cos: SiteBundle\DQL\Cos
+                sin: SiteBundle\DQL\Sin
 
 # Swiftmailer Configuration
 swiftmailer:
