Reworked routing rules for physician directory along with PracticesRepository query for the API. Stripped down the jQuery since the query now handles only getting searched for data instead of using jQuery to parse out matches. Made search work on pressing Enter.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -132,6 +132,8 @@ fos_rest:
         array_normalizer: fos_rest.normalizer.camel_keys
     disable_csrf_role: ROLE_API
     exception:
+        enabled: true
+        exception_controller: 'SiteBundle\Controller\PhysicianAPIController::apiAllPracticesAction'
         codes:
             'Symfony\Component\Routing\Exception\ResourceNotFoundException': 404
             'Doctrine\ORM\OptimisticLockException': HTTP_CONFLICT
