--- a/src/SiteBundle/Resources/config/routing.yml
+++ b/src/SiteBundle/Resources/config/routing.yml
@@ -99,6 +99,11 @@ api_physician_directory:
     prefix: /api
     resource: @SiteBundle/Controller/PhysicianAPIController.php
 
+api_specialties:
+    type: rest
+    prefix: /api
+    resource: @SiteBundle/Controller/SpecialtiesAPIController.php
+
 
 _p_d_f_view:
     path:     /pdf-viewer/{file}
